2006-05-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Fix #78479. Patch by David Emsellem.

2006-05-20  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  CodeGen/templates/ImageWriter.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/Binary/ImageReader.cs
	  Mono.Cecil/Binary/Image.cs
	  Mono.Cecil/Binary/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		Optimize assembly writing.
		Add methods to read assemblies from byte arrays.

	* Mono.Cecil/StructureWriter.cs:
		Throw an exception when the target is an exe
		and no entry point have been setted.
	* Mono.Cecil/AssemblyFactory.cs:
		Add helpers method to defines assemblies.
	* Mono.Cecil/MethodDefinition.cs:
		Set the hasThis flag to the correct value.
	* Mono.Cecil.Cil/CodeReader.cs:
		Remove old comment.
	* Mono.Xml/SmallXmlParser.cs:
		Make private.

2006-05-18  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/MetadataTableReader.cs
	  Mono.Cecil.Metadata/MetadataTableReader.cs
	  Mono.Cecil.Metadata/TableCollection.cs
	  Mono.Cecil.Metadata/TablesHeap.cs:
		Optimize a little bit.

	* CodeGen/templates/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/TableCollection.cs:
		Fix for last changeset.

	* Mono.Cecil.Metadata/RIdAttribute.cs:
		deleted.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  CodeGen/templates/Utilities.cs
	  CodeGen/templates/MetadataTableReader.cs
	  CodeGen/templates/MetadataTableWriter.cs
	  CodeGen/templates/Table.cs
	  CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/Assembly.cs
	  Mono.Cecil.Metadata/InterfaceImpl.cs
	  Mono.Cecil.Metadata/PropertyMap.cs
	  Mono.Cecil.Metadata/Constant.cs
	  Mono.Cecil.Metadata/MethodSpec.cs
	  Mono.Cecil.Metadata/DeclSecurity.cs